# fishpond

./: COPYING.md  Cargo.toml  README.md  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: ci.yml
assets/pieces/cburnett/: SOURCE.md
crates/fishpond_backend/: Cargo.toml
crates/fishpond_backend/src/: chess.rs  lib.rs  main.rs  process_log.rs
crates/fishpond_backend/src/engine/: engine_to_gui.rs  gui_to_engine.rs  mod.rs  uci.rs
crates/fishpond_backend/src/game/: mod.rs  pgn.rs
crates/fishpond_game/: Cargo.toml
crates/fishpond_game/src/: lib.rs  pgn.rs
src/: app.css  chess.rs  engine.rs  game.rs  main.rs  process_log.rs  uci.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/chess/: game.rs  mod.rs
src/engine/: mod.rs  uci.rs
src/gui/: board.rs  mod.rs  plugin.rs
src/gui/board/: background.rs  mod.rs  move_highlight.rs  move_highlights.rs  pieces.rs  plugin.rs  position.rs
src/lib/: board.ts  indicators.ts  piece.ts  sound.ts
src/lib/components/: BoardBackgroundView.svelte  BoardNumberView.svelte  BoardView.svelte  PieceView.svelte  SquareView.svelte
src/lib/components/board/: BoardView.svelte  MoveTarget.svelte  PieceSquareView.svelte  PieceView.svelte
src/lib/components/board/layers/: BoardIndicatorLayer.svelte  BoardNumberLayer.svelte  BoardPieceLayer.svelte  BoardSquareLayer.svelte
src/routes/: +page.svelte
