[package]
name = "fishpond"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12"
bevy_local_commands = "0.4.0"
shakmaty = "0.26.0"
fishpond_game = { path = "./crates/fishpond_game", features = ["bevy"] }

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[workspace]
resolver = "2"
members = ["crates/*"]
