[package]
name = "fishpond"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
bevy = "0.14"
rstest = "0.18.2"
shakmaty = "0.26.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace = true
fishpond_backend = { path = "crates/fishpond_backend" }
# Fix broken compilation with v2.3
async-channel = "=2.2.0"

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package.bevy]
opt-level = 3
