[package]
name = "fishpond_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace = true
bevy_local_commands = "0.11"
shakmaty.workspace = true

[dev-dependencies]
rstest.workspace = true
